2011-02-09  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-show-form-hint): New function to display submitting form
	hint.
	(w3m-after-cursor-move-hook): Use it.

2011-01-31  Johan Claesson  <johanclaesson@bredband.net>

	* w3m.el (w3m-content-type-alist): When selecting which external html
	browser to use, handle the case where browse-url-browser-function is
	an alist.

2011-01-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-rendering-half-dump): Protect against things that look
	like tags but aren't.

2011-01-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Decode entities in title of anchor.

2011-01-23  Kevin Ryde  <user42@zip.com.au>

	* w3m.el (w3m-print-this-url): Correction to my last, use string-width
	not length.

2011-01-13  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-goto-mailto-url): Decode entities in URL.

2011-01-11  Kevin Ryde  <user42@zip.com.au>

	* w3m.el (w3m-print-this-url): If anchor-title plus url is wider than
	the frame then use two lines "Title\nURL".
	(w3m-about-header): Show anchor-title of link at point.

2011-01-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): If exist `title' in anchor, it adds to
	w3m-balloon-help property and puts it to w3m-anchor-title property.
	(w3m-print-this-url): Treat w3m-anchor-title property.

	* w3m-util.el (w3m-anchor-title): New macro.

2011-01-03  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fix-illegal-blocks): Fix FIXEDCASE and LITERAL options of
	replace-match to `t'.

2010-12-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-rendering-half-dump): Add name anchors that w3m can
	handle ([emacs-w3m:11153]).

2010-12-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-replace-regexps-in-string): Move from w3m-lnum.el;
	use w3m-replace-in-string instead of replace-regexp-in-string that is
	not available in XEmacs 21.4; make it a Lisp function.